--- a/YoutubePlaybackSpeed Extension/Info.plist
+++ b/YoutubePlaybackSpeed Extension/Info.plist
@@ -38,19 +38,19 @@
 		<key>SFSafariToolbarItem</key>
 		<dict>
 			<key>Action</key>
-			<string>Command</string>
+			<string>Popover</string>
 			<key>Identifier</key>
 			<string>Button</string>
 			<key>Image</key>
-			<string>ToolbarItemIcon.pdf</string>
+			<string>icon.png</string>
 			<key>Label</key>
-			<string>Your Button</string>
+			<string>Youtube Playback Speed</string>
 		</dict>
 		<key>SFSafariWebsiteAccess</key>
 		<dict>
 			<key>Allowed Domains</key>
 			<array>
-				<string>*.webkit.org</string>
+				<string>*.youtube.com</string>
 			</array>
 			<key>Level</key>
 			<string>Some</string>
@@ -59,6 +59,6 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2019 mikeynap.dev. All rights reserved.</string>
 	<key>NSHumanReadableDescription</key>
-	<string>This is a Safari Extension. You should tell us what your extension does here.</string>
+	<string>Set custom Youtube playback speed per channel</string>
 </dict>
 </plist>
